include/dss_capi.h

    DSS_CAPI_DLL double LoadShapes_Get_MinInterval(void);
    DSS_CAPI_DLL double LoadShapes_Get_sInterval(void);
    DSS_CAPI_DLL void LoadShapes_Set_HrInterval(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_MinInterval(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_Sinterval(double Value);
    DSS_CAPI_DLL double LoadShapes_Get_PBase(void);
    DSS_CAPI_DLL double LoadShapes_Get_Qbase(void);
    DSS_CAPI_DLL void LoadShapes_Set_PBase(double Value);
    DSS_CAPI_DLL void LoadShapes_Set_Qbase(double Value);
    DSS_CAPI_DLL uint16_t LoadShapes_Get_UseActual(void);
    DSS_CAPI_DLL void LoadShapes_Set_UseActual(uint16_t Value);