src/main/CAPI_LoadShapes.pas


end;
//------------------------------------------------------------------------------
function LoadShapes_Get_MinInterval():Double;cdecl;
begin
   Result := 0.0;
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     Result := ActiveLSObject.Interval * 60.0 ;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_sInterval():Double;cdecl;
begin
   Result := 0.0;
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     Result := ActiveLSObject.Interval * 3600.0 ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_HrInterval(Value: Double);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.Interval := Value ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_MinInterval(Value: Double);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.Interval := Value / 60.0 ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Sinterval(Value: Double);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.Interval := Value / 3600.0 ;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_PBase():Double;cdecl;
begin
   Result := 0.0;
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     Result := ActiveLSObject.baseP ;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_Qbase():Double;cdecl;
begin
   Result := 0.0;
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     Result := ActiveLSObject.baseQ ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_PBase(Value: Double);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.baseP := Value ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_Qbase(Value: Double);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.baseQ := Value ;
end;
//------------------------------------------------------------------------------
function LoadShapes_Get_UseActual():WordBool;cdecl;
begin
   Result := False;
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     Result := ActiveLSObject.UseActual ;
end;
//------------------------------------------------------------------------------
procedure LoadShapes_Set_UseActual(Value: WordBool);cdecl;
begin
   If ActiveCircuit <> Nil Then
   If ActiveLSObject <> Nil Then
     ActiveLSObject.UseActual  := Value ;
end;
//------------------------------------------------------------------------------
END.
